Added input parameters and steps descriptions

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,3 +3,11 @@
   <p-listbox [options]="transformations" [(ngModel)]="transformationSelected" [style]="{'width':'275px','height':'300px'}"></p-listbox>
 
 </div>
+
+<div class="input">
+  <label>Input Parameters</label>
+  <div class="inputFields">
+    <input type="text" [(ngModel)]="input_1" placeholder="p1" size="10" style="margin-right: 10px;">
+    <input type="text" [(ngModel)]="input_2" placeholder="p2" size="10">
+  </div>
+</div>
