--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,12 @@
   padding-left: 30px;
 }
 
-.datatable {
+.tabular {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.rdf {
   padding-left: 10px;
   padding-right: 10px;
 }
