--- a/src/app/table/tabular/tabular.component.html
+++ b/src/app/table/tabular/tabular.component.html
@@ -1,7 +1,9 @@
-<div id="tabular"></div>
+<div id='tabular'>
+</div>
 
-<div class="chart">
+<rdf [data]='data' [hot]='hot' [headers]='headers' [inferredTypes]='inferredTypes' (emitter)='getEmittedRDFdata($event)'></rdf>
 
-  <chart [chartData01]='chartData01' [chartData02]='chartData02' [chartData03]='chartData03' [statsData]='statsData' [profileSubset]="profileSubset"
-    [inferredType]="inferredType" (profileSubsetEmitter)="onProfileSubsetEmitted($event)"></chart>
+<div class='chart' *ngIf='tabularMode'>
+  <chart [chartData01]='chartData01' [chartData02]='chartData02' [chartData03]='chartData03' [statsData]='statsData' [profileSubset]='profileSubset'
+    [inferredType]='inferredType' (profileSubsetEmitter)='onProfileSubsetEmitted($event)'></chart>
 </div>
