Upgrade latest ng2 cli & dependencies - fixed unmet peer dependencies

--- a/src/app/sidebar.import/sidebar.import.component.html
+++ b/src/app/sidebar.import/sidebar.import.component.html
@@ -3,9 +3,9 @@
     <select nglFormControl class="slds-select" [required]="required" [(ngModel)]="selectFile">
       <option>Weather</option>
       <option>Stocks</option>
-      <option>Statsbygg state of estate</option>
       <option>Flights 300K</option>
       <option>Airports</option>
+      <option>RDF</option>      
     </select>
   </ngl-form-element>
 </div>
