--- a/src/app/sidebar.import/sidebar.import.component.html
+++ b/src/app/sidebar.import/sidebar.import.component.html
@@ -2,6 +2,7 @@
   <ngl-form-element label="Select file" [error]="hasError ? error : null" class="slds-m-top--small">
     <select nglFormControl class="slds-select" [required]="required" [(ngModel)]="selectFile">
       <option>Weather</option>
+      <option>State of estate</option>      
       <option>Stocks</option>
       <option>Flights 300K</option>
       <option>Airports</option>
