--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
 
-  <p-listbox [options]="transformations" [(ngModel)]="transformationSelected" [style]="{'width':'275px','height':'300px'}"></p-listbox>
+  <p-listbox [options]="transformations" [(ngModel)]="transformationSelected" (ngModelChange)="onChange($event)" [style]="{'width':'275px','height':'300px'}"></p-listbox>
 
 </div>
 
