try to create HTML table with headers in RDF Mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
 <div class="main-container">
   <!-- Header section -->
   <header class="header header-6">
@@ -32,7 +33,8 @@
     <!-- Main content area -->
     <div class="content-area">
       <div class="tabular">
-        <tabular [profileSubset]="profileSubset" (profileSubsetEmitter)="onProfileSubsetEmitted($event)" (tableSelectedEmitter)="onTableSelectedEmitted($event)"></tabular>
+        <tabular [profileSubset]="profileSubset" (profileSubsetEmitter)="onProfileSubsetEmitted($event)"
+                 (tableSelectedEmitter)="onTableSelectedEmitted($event)"></tabular>
       </div>
     </div>
     <!-- Sidebar section -->
