--- a/src/app/table/annotation/annotation.component.html
+++ b/src/app/table/annotation/annotation.component.html
@@ -1,9 +1,10 @@
 <div>
   <form>
     <input id="{{getSubjectId()}}" type="radio"  name="{{ colId }}.radio" value="Subject" (click)="subjectSelect()"> S
-    <input type="radio" id="{{ colId }}.Object" name="{{ colId }}.radio" value="Object" (click)="objectSelect()"> O <br>
+    <input type="radio" id="{{ colId }}.Object" name="{{ colId }}.radio" value="Object" (click)="objectSelect()"> O
+    <button onclick=""> Go to detail page </button><br>
     <input id="{{ colId }}.Entity" placeholder="Insert here Entity"> <br>
-    <div>
+    <div *ngIf=" object ">
       <input id="{{ colId }}.Property" placeholder="Insert here property"> <br>
       <input id="{{ colId }}.Type" placeholder="Insert here type (URL or Literal)"> <br>
     </div>
