start to build detail Mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,8 +30,6 @@
   </header>
 
 
-
-
   <!-- Tabular/ rdf mode section -->
   <div class="content-container">
     <!-- Main content area -->
@@ -42,14 +40,11 @@
       </div>
     </div>
 
-    <!-- Detail Mode--><!-- devo creare un componente che sia lo scheletro della detailMode-->
-    <detailMode>
 
-    </detailMode>
 
     <!-- Sidebar section -->
     <nav class="sidenav">
-      <clr-tabs *ngIf="tabularMode && !detailMode.isActive">
+      <clr-tabs *ngIf="tabularMode && !detailModeStatus()">
         <clr-tab-link [clrTabLinkId]="'link1'" [clrTabLinkActive]="true">File Import</clr-tab-link>
         <clr-tab-link>Suggested Transformations</clr-tab-link>
         <clr-tab-content [clrTabContentId]="'import'" [clrTabContentActive]="true">
@@ -68,7 +63,7 @@
             <div class="apply">
               <button type="submit" (click)="applyTransformation()" class="btn btn-primary btn-sm">Apply</button>
             </div>
-            <div *ngIf="display && !detailMode.isActive" class="status">
+            <div *ngIf="display && !detailModeStatus()" class="status">
               <span class="label label-success"> OK </span>
             </div>
           </div>
@@ -78,7 +73,7 @@
           </div>
         </clr-tab-content>
       </clr-tabs>
-      <clr-tabs *ngIf="rdfMode && !detailMode.isActive">
+      <clr-tabs *ngIf="rdfMode && !detailModeStatus()">
         <clr-tab-link [clrTabLinkId]="'link1'" [clrTabLinkActive]="true">CIAO</clr-tab-link>
         <clr-tab-link>Suggested Transformations</clr-tab-link>
         <clr-tab-content [clrTabContentId]="'import'" [clrTabContentActive]="true">
@@ -97,7 +92,7 @@
             <div class="apply">
               <button type="submit" (click)="applyTransformation()" class="btn btn-primary btn-sm">Apply</button>
             </div>
-            <div *ngIf="display && !detailMode.isActive" class="status">
+            <div *ngIf="display && detailModeStatus()" class="status">
               <span class="label label-success"> OK </span>
             </div>
           </div>
@@ -111,6 +106,9 @@
 
   </div>
 
+  <!-- Detail Mode--><!-- devo creare un componente che sia lo scheletro della detailMode-->
+  <detailMode>
 
+  </detailMode>
 
 </div>
