first try to use angular/route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<router-outlet></router-outlet>
 
 <div class="main-container">
   <!-- Header section -->
@@ -74,9 +75,6 @@
         </clr-tab-content>
       </clr-tabs>
     </nav>
-
   </div>
-
-  <!-- Detail Mode--><!-- devo creare un componente che sia lo scheletro della detailMode-->
-
 </div>
+
