--- a/src/app/table/annotation/detailMode.component.html
+++ b/src/app/table/annotation/detailMode.component.html
@@ -11,6 +11,10 @@
   <input id = "Entity" placeholder="Insert Entity" value={{entity}}>
   <div *ngIf="isObject">
     <input id = "Property" placeholder="Insert Property" value={{property}}> <br>
+
+    <input type="radio" name="URLorLiteralD" value="URL" > URL <br>
+    <input type="radio" name="URLorLiteralD" value="Literal" > Literal <br>
+
     <input id = "Type" placeholder="Insert type of resource" value={{type}}>
   </div>
 
