--- a/src/app/table/annotation/annotation.component.html
+++ b/src/app/table/annotation/annotation.component.html
@@ -8,7 +8,7 @@
     <input type="radio" id="{{ colId }}.Object" name="{{ colId }}.radio" value="Object" (click)="objectSelect()"> O <br>
 
     <div>
-      <a [routerLink]="['/detail', entity]" routerLinkActive="active"> Go to detail page </a><br>
+      <a [routerLink]="['/detail', object, entity, property, type]" routerLinkActive="active"> Go to detail page </a><br>
     </div>
 
     <div>
@@ -29,9 +29,4 @@
 <!--<detailMode>
 
 </detailMode>-->
-
-
-
 <!--(click) ="setDetailMode(colId)"-->
-
-
